--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -12,7 +12,7 @@ ft_lstadd_back.c ft_lstdelone.c \
 ft_lstclear.c ft_lstiter.c ft_lstmap.c
 
 NAME		= libft.a
-CC			= clang
+CC			= gcc
 
 CFLAGS		= -Wall -Werror -Wextra
 
